deploy/k8s/overlays/dev/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jovies-app
  labels:
    environment: development
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: jovies-app
          resources:
            requests:
              memory: "40Mi"
              cpu: "10m"
            limits:
              memory: "100Mi"
